--- a/apps/pixel/src/styles/01_settings/_variables.scss
+++ b/apps/pixel/src/styles/01_settings/_variables.scss
@@ -94,23 +94,23 @@ $z-index-coeff: 1;
  * See: https://material.io/design/environment/elevation.html#default-elevations
  */
 $z-indexes: (
-  dialog: elevate(24),
-  modal-bottom-sheet: elevate(16),
-  modal-side-sheet: elevate(16),
-  nav-drawer: elevate(16),
-  fab: elevate(12),
-  bottom-sheet: elevate(8),
-  side-sheet: elevate(8),
-  bottom-nav-bar: elevate(8),
-  bottom-app-bar: elevate(8),
-  menu: elevate(8),
-  sub-menu: elevate(8),
-  card-picked: elevate(8),
-  button-pressed: elevate(8),
-  fab-snack: elevate(6),
-  top-bar-scrolled: elevate(4),
-  top-bar-rest: elevate(4),
-  base: elevate(0),
+  dialog: 24,
+  modal-bottom-sheet: 16,
+  modal-side-sheet: 16,
+  nav-drawer: 16,
+  fab: 12,
+  bottom-sheet: 8,
+  side-sheet: 8,
+  bottom-nav-bar: 8,
+  bottom-app-bar: 8,
+  menu: 8,
+  sub-menu: 8,
+  card-picked: 8,
+  button-pressed: 8,
+  fab-snack: 6,
+  top-bar-scrolled: 4,
+  top-bar-rest: 4,
+  base: 0,
 );
 
 $line-widths: (
